Registro con validaciones y modal + estilos

--- a/biblioteca-inteligente-react/src/styles/biblioteca.css
+++ b/biblioteca-inteligente-react/src/styles/biblioteca.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600;800&family=Open+Sans:ital,wght@0,400;1,400&family=Poppins:wght@400;600&display=swap');
 
 /*
- VARIABLES & RESET
+ VARIABLES & RESETEO
 */
 :root {
   --color-primario:   #3498db;
@@ -360,8 +360,29 @@ NAVBAR & LOGO
   background: var(--color-peligro-h);
 }
 
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-contenido {
+  padding: 20px;
+  border-radius: 8px;
+  min-width: 300px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  text-align: center;
+}
+
+
 /*
-  LOGIN & REGISTRO
+  LOGIN y REGISTRO
 */
 body.login-page {
   display: flex;
@@ -444,7 +465,7 @@ form button:hover {
 }
 
 /*
-   10) UTILIDADES & RESPONSIVE
+  UTILIDADES y RESPONSIVE
 */
 .oculto {
   display: none !important;
